[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/player.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://graphics/axe.png" type="Texture" id=3]
[ext_resource path="res://sound/chop.wav" type="AudioStream" id=4]
[ext_resource path="res://sound/death.wav" type="AudioStream" id=5]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 80, 100 )

[node name="Player" type="Sprite"]
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Axe" type="Sprite" parent="."]
visible = false
position = Vector2( -130, 30 )
texture = ExtResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.02
one_shot = true

[node name="ChopSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
